deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "36"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"lessony","namespace":"default"},"spec":{"selector":{"matchLabels":{"app":"lessony"}},"template":{"metadata":{"labels":{"app":"lessony"}},"spec":{"containers":[{"env":[{"name":"MONGO_USER_LOGGING","valueFrom":{"secretKeyRef":{"key":"mongo-logging-root-username","name":"secret"}}},{"name":"MONGO_PASSWORD_LOGGING","valueFrom":{"secretKeyRef":{"key":"mongo-logging-root-password","name":"secret"}}},{"name":"MONGO [...]
    creationTimestamp: "2022-09-10T10:42:07Z"
    generation: 54
    labels:
      k8slens-edit-resource-version: v1
    name: lessony
    namespace: default
    resourceVersion: "33548724682"
    uid: 57273ab5-3342-415f-8a5c-433bec07252a
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: lessony
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2023-06-11T16:31:31+02:00"
        creationTimestamp: null
        labels:
          app: lessony
      spec:
        containers:
        - env:
          - name: MONGO_USER_LOGGING
            valueFrom:
              secretKeyRef:
                key: mongo-logging-root-username
                name: secret
          - name: MONGO_PASSWORD_LOGGING
            valueFrom:
              secretKeyRef:
                key: mongo-logging-root-password
                name: secret
          - name: MONGO_USER
            valueFrom:
              secretKeyRef:
                key: mongo-root-username
                name: secret
          - name: MONGO_PASSWORD
            valueFrom:
              secretKeyRef:
                key: mongo-root-password
                name: secret
          - name: SMTP_USERNAME
            valueFrom:
              secretKeyRef:
                key: smtp-username
                name: secret
          - name: SMTP_PASSWORD
            valueFrom:
              secretKeyRef:
                key: smtp-password
                name: secret
          - name: JWT_SECRET
            valueFrom:
              secretKeyRef:
                key: jwt-secret
                name: secret
          - name: MONGO_HOST_LOGGING
            valueFrom:
              configMapKeyRef:
                key: database-url-logging
                name: config-map
          - name: MONGO_URI
            valueFrom:
              configMapKeyRef:
                key: database-url
                name: config-map
          - name: SMTP_HOST
            valueFrom:
              configMapKeyRef:
                key: smtp-host
                name: config-map
          - name: SMTP_PORT
            valueFrom:
              configMapKeyRef:
                key: smtp-port
                name: config-map
          - name: EMAIL_FROM
            valueFrom:
              configMapKeyRef:
                key: email-from
                name: config-map
          - name: APP_PORT
            value: "8080"
          - name: APP_PREFIX_PATH
            value: /api/v1
          image: kylecode/lessony:latest
          imagePullPolicy: Always
          name: lessony
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        imagePullSecrets:
        - name: regcred
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-08-07T17:32:30Z"
      lastUpdateTime: "2023-08-07T17:32:30Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2022-11-06T09:58:38Z"
      lastUpdateTime: "2023-08-07T17:33:20Z"
      message: ReplicaSet "lessony-6566864dbb" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 54
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "8"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"mongodb"},"name":"mongodb-deployment","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mongodb"}},"template":{"metadata":{"labels":{"app":"mongodb"}},"spec":{"containers":[{"args":["--dbpath","/data/db"],"env":[{"name":"MONGO_INITDB_ROOT_USERNAME","valueFrom":{"secretKeyRef":{"key":"mongo-root-username","name":"secret"}}},{"name":"MONGO_INITDB_ROOT_PASSWORD","valueFrom": [...]
    creationTimestamp: "2022-09-10T10:32:43Z"
    generation: 14
    labels:
      app: mongodb
    name: mongodb-deployment
    namespace: default
    resourceVersion: "33425376426"
    uid: b239ee28-6eb5-40ce-a821-1a34e0329f79
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mongodb
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2023-06-10T13:32:34+02:00"
        creationTimestamp: null
        labels:
          app: mongodb
      spec:
        containers:
        - args:
          - --dbpath
          - /data/db
          env:
          - name: MONGO_INITDB_ROOT_USERNAME
            valueFrom:
              secretKeyRef:
                key: mongo-root-username
                name: secret
          - name: MONGO_INITDB_ROOT_PASSWORD
            valueFrom:
              secretKeyRef:
                key: mongo-root-password
                name: secret
          image: mongo
          imagePullPolicy: Always
          name: mongodb
          ports:
          - containerPort: 27017
            protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data/db
            name: mongo-data-dir
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mongo-data-dir
          persistentVolumeClaim:
            claimName: mongo-pvc-app
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-05-30T12:15:26Z"
      lastUpdateTime: "2023-06-10T11:33:45Z"
      message: ReplicaSet "mongodb-deployment-5d57d75b65" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2023-07-29T03:09:02Z"
      lastUpdateTime: "2023-07-29T03:09:02Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 14
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"mongodb-logging"},"name":"mongodb-deployment-logging","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mongodb-logging"}},"template":{"metadata":{"labels":{"app":"mongodb-logging"}},"spec":{"containers":[{"args":["--dbpath","/data/db"],"env":[{"name":"MONGO_INITDB_ROOT_USERNAME","valueFrom":{"secretKeyRef":{"key":"mongo-logging-root-username","name":"secret"}}},{"name":" [...]
    creationTimestamp: "2022-09-10T10:40:43Z"
    generation: 1
    labels:
      app: mongodb-logging
    name: mongodb-deployment-logging
    namespace: default
    resourceVersion: "33425376419"
    uid: b61a71b4-4bb4-4151-9cfe-7012a4571008
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: mongodb-logging
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: mongodb-logging
      spec:
        containers:
        - args:
          - --dbpath
          - /data/db
          env:
          - name: MONGO_INITDB_ROOT_USERNAME
            valueFrom:
              secretKeyRef:
                key: mongo-logging-root-username
                name: secret
          - name: MONGO_INITDB_ROOT_PASSWORD
            valueFrom:
              secretKeyRef:
                key: mongo-logging-root-password
                name: secret
          image: mongo
          imagePullPolicy: Always
          name: mongodb-logging
          ports:
          - containerPort: 27017
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data/db
            name: mongo-data-dir
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: mongo-data-dir
          persistentVolumeClaim:
            claimName: mongo-pvc-logging
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2022-09-10T10:40:43Z"
      lastUpdateTime: "2022-09-10T10:41:28Z"
      message: ReplicaSet "mongodb-deployment-logging-578899544d" has successfully
        progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2023-07-29T03:09:02Z"
      lastUpdateTime: "2023-07-29T03:09:02Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
