ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"0"},"name":"lessony-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"app.lessony.de","http":{"paths":[{"backend":{"service":{"name":"lessony-service","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["app.lessony.de"],"secretName":"lessony-ingress-v2"}]}}
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
    creationTimestamp: "2022-07-26T18:14:54Z"
    generation: 9
    name: lessony-ingress
    namespace: default
    resourceVersion: "31099586454"
    uid: 783c61ee-336c-4de6-8ae3-9e53d5dec523
  spec:
    ingressClassName: nginx
    rules:
    - host: app.lessony.de
      http:
        paths:
        - backend:
            service:
              name: lessony-service
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - app.lessony.de
      secretName: lessony-ingress-v2
  status:
    loadBalancer:
      ingress:
      - ip: 85.215.172.98
kind: List
metadata:
  resourceVersion: ""
